# na-sso

./: .clineignore  .dockerignore  .geminiignore  .gitignore  AGENTS.md  CLAUDE.md  DOX.md  Dockerfile  Dockerfile.demo-ssh  README.md  THIRD_PARTY_NOTICES.md  compose-helper.env  compose-helper.sh  demo-ssh.sh  docker-compose-demo.yaml  docker-compose.yaml  oneauth.demo.yaml  oneauth.example.yaml  pyproject.toml
.claude/: settings.json
.clinerules/: 00-core-reasoning-rules.md  code-quality.md  dox.md  lazyway-io-design.md  master-plan.md
.config/: .env.example  na-sso.yaml.example  oneauth.yaml.example
.config-demo/: .env
.goal-ledger/: GOAL.md  phase-0001.md  phase-0002.md  phase-0003.md  phase-0004.md  phase-0005.md  phase-0006.md
docs/: ADMIN.md  AGENTS.md  CONNECTORS.md  DEMO.md  DEVELOPER.md  FUTURE-WORK.md  NEXT-PHASE.md  PRODUCTION.md  USER.md
na_sso/: AGENTS.md  DOX.md  __init__.py  api.py  api_contract.py  assignments.py  audit.py  audit_query.py  audit_retention.py  auth.py  bulk.py  cli.py  config.py  dashboard.py  db.py  email_delivery.py  feedback.py  governance.py  inventory.py  lifecycle.py  main.py  mfa.py  models.py  notifications.py  operations.py  permissions.py  reconcile.py  reconciliation.py  request_security.py  security.py  service_accounts.py  ssh_keys.py  status.py  sync.py  target_credentials.py  unmanaged.py  users.py
oneauth/: AGENTS.md  __init__.py  audit.py  auth.py  config.py  db.py  main.py  models.py  security.py  status.py  sync.py  target_credentials.py  users.py
tests/: AGENTS.md  DOX.md  conftest.py  test_api.py  test_assignments.py  test_audit.py  test_bulk_import.py  test_cli.py  test_config.py  test_connector_contract.py  test_connectors.py  test_dashboard.py  test_email_delivery.py  test_governance.py  test_inventory.py  test_lifecycle.py  test_mfa.py  test_migrations.py  test_mock_targets.py  test_notifications.py  test_permissions.py  (+8 more)
(+138 files in other folders)
