[project]
name = "na-sso"
version = "0.1.0"
description = "Not Another SSO: admin-managed users propagated to local accounts on external targets"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "bcrypt>=4.1",
    "cryptography>=42",
    "itsdangerous>=2.2",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "asyncssh>=2.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["na_sso*"]

[tool.setuptools.package-data]
na_sso = ["templates/*", "static/*", "static/design/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
